# protoBanana

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  DECISIONS.md  HOWTO.md  JOURNEY.md  LICENSE  PHASES.md  PROPOSAL.md  README.md  pyproject.toml
.github/workflows/: docs-deploy.yml
app/: README.md  __init__.py  __main__.py  gradio_app.py
app/spaces/: README.md  app.py  requirements.txt
docs/: agent.md  api.md  architecture.md  benchmarks.md  diataxis.md  gradio-app.md  index.md  installation.md  intent-router.md  observability.md  operating.md  package.json  prebuild.mjs  validating-workflows.md  workflows-cookbook.md
docs/.vitepress/: config.ts
docs/guide/: quickstart.md
protobanana/: __init__.py  _tracing.py  agent.py  client.py  provider.py  tools.py
protobanana/intents/: __init__.py  keywords.py  llm.py
protobanana/routes/: __init__.py  bgremove.py  edit.py  gen.py  ideogram.py  inpaint.py  krea2_edit.py  multiref.py  outpaint.py  region_edit.py
protobanana/workflows/: __init__.py  loader.py
scripts/: validate_workflows.py
tests/: test_agent_loop.py  test_client_poll.py  test_gradio_chat_history.py  test_intents_keywords.py  test_intents_llm_classifier.py  test_intents_outpaint_directions.py  test_intents_region_split.py  test_provider_chat_extract.py  test_provider_dispatch.py  test_routes_ideogram.py  test_routes_krea2_edit.py  test_routes_multiref.py  test_tracing_noop.py  test_workflow_loader.py  test_workflows_static.py
workflows/: bgremove_birefnet.json  bgremove_rmbg2.json  edit_qwen_image_2511.json  ideogram-4.json  ideogram_4_fp8.json  ideogram_4_nf4.json  inpaint_qwen_image_2511.json  krea2_identity_edit.json  krea2_identity_edit_realism.json  krea2_identity_edit_realism_two_ref.json  krea2_identity_edit_two_ref.json  multiref_qwen_image_2511.json  outpaint_qwen_image_2511.json  qwen_image_2512.json  qwen_image_2512_turbo.json  qwen_image_edit_2511.json  region_edit_sam3_qwen_image_2511.json
