[project]
name = "protobanana"
version = "0.1.0a1"
description = "OSS chat-native image generation + editing on the protoLabs gateway (Qwen-Image + ComfyUI + LiteLLM CustomLLM)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "protoLabsAI", email = "josh@protolabs.studio" },
]
keywords = ["image-generation", "image-editing", "litellm", "comfyui", "qwen-image", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "litellm>=1.83",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
]
gradio = [
    "gradio>=5.6,<6",
    "openai>=2.0,<3",
    "pillow>=10.0",
]
# Langfuse SDK presence — required for our fine-grained span emission
# AND for LiteLLM's own success_callback Langfuse integration when
# protobanana is installed in the same venv as litellm.
#
# Pinned to v2 because LiteLLM (proxy-runtime) hard-pins
# langfuse==2.59.7 and constructs Langfuse(sdk_integration=...) which
# v3 dropped — installing v3 alongside LiteLLM breaks LiteLLM's
# callback at proxy boot.
#
# Our _tracing.py uses v3's get_client/start_as_current_span; on v2
# the import gracefully fails → fine-grained sub-spans no-op. Until
# we ship a v2 adapter (see protoBanana issue tracking), this is the
# safer trade: LiteLLM gets its (coarse) per-request traces, ours
# stay quiet rather than break LiteLLM's.
tracing = [
    "langfuse>=2.59,<3",
]
# Tool-use agent — protobanana/agent.py + intents/llm.py call an
# OpenAI-compatible LLM as the chat router + brain. Without this
# extra the agent module returns None on every call (caller falls
# back to the keyword classifier path).
agent = [
    "openai>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/protoLabsAI/protoBanana"
Documentation = "https://github.com/protoLabsAI/protoBanana/tree/main/docs"
Repository = "https://github.com/protoLabsAI/protoBanana"
Issues = "https://github.com/protoLabsAI/protoBanana/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protobanana"]

[tool.hatch.build.targets.sdist]
include = ["protobanana", "workflows", "README.md", "LICENSE", "CITATION.cff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
